System properties changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-firebase.credential.path=/Users/pradyum/Documents/Work/Code/ahara-backend/src/main/resources/service-account-credentials.json
+firebase.credential.path=./src/main/resources/service-account-credentials.json
+java.runtime.version=11.0.3
