--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Ahara Food App Backend</description>
 	<properties>
 		<java.version>11</java.version>
+		<!-- <maven.compiler.source>10</maven.compiler.source>
+       <maven.compiler.target>10</maven.compiler.target> -->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -75,10 +77,13 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+				<configuration>
+					<release>11</release>
+				</configuration>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
     			<groupId>org.apache.maven.plugins</groupId>
     			<artifactId>maven-compiler-plugin</artifactId>
     			<version>3.1</version>
@@ -86,7 +91,7 @@
        		 <source>1.8</source>
        		 <target>1.8</target>
     		</configuration>
-			</plugin>
+			</plugin> -->
 		</plugins>
 	</build>
 
